main section added  with styles

--- a/index.html
+++ b/index.html
@@ -68,5 +68,26 @@
 </nav>
 
 </header>
+<!-- main-section -->
+ <main class="main">
+    <section class="home section--lg">
+<div class="home__container container grid">
+<div class="home__content">
+    <span class="home__subtitle">
+        Hot Promotions
+    </span>
+    <h1 class="home__title">
+        Fashion Treading
+        <span>Great Collection</span>
+    </h1>
+    <p class="home__description">
+        Save more with coupons & up to 20% off
+    </p>
+<a href="shop.html" class="btn">Shop Now</a>
+</div>
+<img src="images/home-img.png" alt="" class="home__img">
+</div>
+    </section>
+ </main>
 </body>
 </html>
