--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,89 @@
         </div>
     </div>
  </div>
+ <!-- deals-section -->
+  <section class="deals section">
+    <div class="deals__container container grid">
+        <div class="deals__item">
+            <div class="deals__group">
+                <h3 class="deals__brand">Deals of the Day</h3>
+            <span class="deals__category">Limited quantites.</span>
+            </div>
+            <h4 class="deals__title">
+                Summer Collection new Modern design
+            </h4>
+            <div class="deals__price flex">
+                <span class="new__price">$134.00</span>
+                <span class="old__price">$125.99</span>
+            </div>
+            <div class="deals__group">
+                <p class="deals__countdown-text">
+                    Harry Up!Offer End In:
+                </p>
+                <div class="countdown">
+                    <div class="countdown__amount">
+                        <p class="countdown__period">02</p>
+                        <span class="unit">Days</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">23</p>
+                        <span class="unit">Hour</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">5</p>
+                        <span class="unit">Mins</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">58</p>
+                        <span class="unit">Sec</span>
+                    </div>
+                </div>
+            </div>
+            <div class="deals__btn">
+                <a href="details.html" class="btn btn--md">Shop Now</a>
+            </div>
+        </div>
+        <div class="deals__item">
+            <div class="deals__group">
+                <h3 class="deals__brand">Women Clothing</h3>
+            <span class="deals__category">Shirt & Bag</span>
+            </div>
+            <h4 class="deals__title">
+                Try something new on vacation
+            </h4>
+            <div class="deals__price flex">
+                <span class="new__price">$134.00</span>
+                <span class="old__price">$125.99</span>
+            </div>
+            <div class="deals__group">
+                <p class="deals__countdown-text">
+                    Harry Up!Offer End In:
+                </p>
+                <div class="countdown">
+                    <div class="countdown__amount">
+                        <p class="countdown__period">02</p>
+                        <span class="unit">Days</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">23</p>
+                        <span class="unit">Hour</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">5</p>
+                        <span class="unit">Mins</span>
+                    </div>
+                     <div class="countdown__amount">
+                        <p class="countdown__period">58</p>
+                        <span class="unit">Sec</span>
+                    </div>
+                </div>
+            </div>
+            <div class="deals__btn">
+                <a href="details.html" class="btn btn--md">Shop Now</a>
+            </div>
+        </div>
+    </div>
+  </section>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
  <script src="main.js"></script>
 </body>
