--- a/index.html
+++ b/index.html
@@ -1215,6 +1215,343 @@
         </div>
     </div>
   </section>
+  <!-- new-arrivals-section -->
+   <section class="new__arrivals container section">
+        <h3 class="section__title">
+        <span>New</span>Arrivals
+    </h3>
+<div class="new__container swiper">
+<div class="swiper-wrapper">
+<div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-9-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-9-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-10-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-10-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-11-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-11-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-12-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-12-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-13-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-13-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-3-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-3-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+               <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-8-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-8-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+                <div class="product__item swiper-slide">
+                    <div class="product__banner">
+                        <a href="details.html" class="product__images">
+                            <img src="images/product-3-1.jpg" alt="" class="product__img default">
+                            <img src="images/product-3-2.jpg" alt="" class="product__img hover">
+                        </a>
+                        <div class="product__actions">
+                            <a href="#" class="action__btn" aria-label="Quick view">
+                                <i class="fi fi-rs-eye"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Add To Wishlist">
+                                <i class="fi fi-rs-heart"></i>
+                            </a>
+                             <a href="#" class="action__btn" aria-label="Compare">
+                                <i class="fi fi-rs-shuffle"></i>
+                            </a>
+                        </div>
+                        <div class="product__badge light-pink">Hot</div>
+                    </div>
+                    <div class="product__content">
+                        <span class="product__category">Cloting</span>
+                        <a href="details.html">
+                            <h3 class="product-title">Colorfull pattern Shirts</h3>
+                            </a>
+                            <div class="product-rating">
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                                <i class="fi fi-rs-star"></i>
+                            </div>
+                        <div class="product-price flex">
+                            <span class="new__price">$230.85</span>
+                            <span class="old__price">$245.85</span>
+                        </div>
+                         <a href="#" class="action__btn cart__btn" aria-label="Add to cart">
+                                <i class="fi fi-rs-shopping-bag-add"></i>
+                            </a>
+                    </div>
+                </div>
+
+</div>
+   <div class="swiper-buttons-top-right">
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+
+
+  </div>
+</div>
+   </section>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
  <script src="main.js"></script>
 </body>
