showcase section full added with s

--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,226 @@
   </div>
 </div>
    </section>
+   <!-- showcase-section -->
+    <section class="showcase section">
+        <div class="showcase__container container grid">
+            <div class="showcase_wrapper">
+                <h3 class="section__title">Hot Releases</h3>
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-1.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Floral Print Casual Cotton Dress
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-2.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Ruffled Solid Long Sleeve Blouse
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-3.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Multi-color Print V-neck T-Shirt
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="showcase_wrapper">
+                <h3 class="section__title">Deals & Outlet</h3>
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-4.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Fish Print Patched T-Shirt
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-6.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Vintage Floral Print Dress
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-6.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Multi-color Stripe Circle
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="showcase_wrapper">
+                <h3 class="section__title">Top Selling</h3>
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-7.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Geinetruc Printed Longer
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-8.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Printed Patchwork mexi Dress
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-9.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Daisy Floral Print Strops
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           <div class="showcase_wrapper">
+                <h3 class="section__title">Deals & Outlet</h3>
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-4.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Fish Print Patched T-Shirt
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-6.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Vintage Floral Print Dress
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="showcase__item">
+                    <a href="details.html" class="showcase__img-box">
+                        <img src="images/showcase-img-6.jpg" alt="" class="showcase__img">
+                    </a>
+                    <div class="showcase__content">
+                        <a href="details.html">
+                            <h4 class="showcase__title">
+Multi-color Stripe Circle
+                            </h4>
+                        </a>
+                        <div class="showcase__price">
+                            <span class="new__price">$238.00</span>
+                            <span class="old__price">$245.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
  <script src="main.js"></script>
 </body>
