newsletter section added

--- a/index.html
+++ b/index.html
@@ -1772,6 +1772,22 @@ Multi-color Stripe Circle
             </div>
         </div>
     </section>
+    <!-- newsletter-section -->
+     <section class="newsletter section home__newsletter">
+<div class="newsletter__container container grid">
+    <h3 class="newsletter__title flex">
+        <img src="images/icon-email.svg" alt="" class="newsletter__icon">
+        Sign up to Newsletter
+    </h3>
+    <p class="newsletter__description">
+..and receive $20 coupon for first shopping
+    </p>
+    <form action="" class="newsletter__form">
+        <input type="text" placeholder="Enter your email" class="newsletter__input">
+        <button type="submit"  class="newsletter__btn">Subscribe</button>
+    </form>
+</div>
+     </section>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
  <script src="main.js"></script>
 </body>
