loader added in category and production section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 
   </div>
 </div>
+<div id="loader-section-slider">
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+</div>
   </section>
 <!-- product-section -->
  <div class="products section container">
@@ -1089,6 +1095,12 @@
             </div>
         </div>
     </div>
+<div id="loader-section">
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+</div>
  </div>
  <!-- deals-section -->
   <section class="deals section">
@@ -1494,6 +1506,12 @@
 
 
   </div>
+  <div id="loader-section-slider">
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+    <div class="rounder"></div>
+</div>
 </div>
    </section>
    <!-- showcase-section -->
