--- a/details.html
+++ b/details.html
@@ -91,7 +91,127 @@
 <section class="details section-lg" id="product-details">
 
 </section> 
+<!-- details-tab -->
+<section class="details__tab container">
+    <div class="detail__tabs">
+        <span class="detail__tab active-tab" data-target="#info">
+            Additional Info
+        </span>
+        <span class="detail__tab" data-target="#reviews">Reviews(3)</span>
+    </div>
+    <div class="details__tabs-content">
+        <div class="details__tab-content active-tab" content id="info">
+            <table class="info__table">
+                <tr>
+                    <th>Fjallraven - Foldsack No. 1 Backpack:</th>
+                    <td>A functional backpack with a 15-inch laptop</td>
+                </tr>
+                <tr>
+                    <th>Mens Casual Premium Slim Fit T-Shirts:</th>
+                    <td>These shirts offer a modern, slim-fit silhouette</td>
+                </tr>
+                <tr>
+                    <th>Mens Cotton Jacket</th>
+                    <td>A rugged, mid-weight jacket featuring a stand collar</td>
+                </tr>
+                
+            </table>
+        </div>
+        <div class="details__tab-content" content id="reviews">
+            <div class="reviews__container grid">
+              <div class="review__single">
+                <div>
+                    <img src="images/avatar-1.jpg" class="review__img">
+                    <h4 class="review__title">Jacky chan</h4>
+                </div>
+                <div class="review__data">
+<div class="review__rating">
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+</div>
+<p class="review_description">
+Thanks you very fast shipping from bd shopping Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum doloribus omnis amet quod optio adipisci, unde laudantium, fugit voluptatibus consequatur culpa nam. Officiis, ut omnis?
+</p>
+<span class="review__date">
+    December 4,2026
+</span>
+                </div>
+              </div>  
 
+               <div class="review__single">
+                <div>
+                    <img src="images/avatar-2.jpg" class="review__img">
+                    <h4 class="review__title">Jacky chan</h4>
+                </div>
+                <div class="review__data">
+<div class="review__rating">
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+</div>
+<p class="review_description">
+Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptas dignissimos consequuntur asperiores tenetur distinctio!
+</p>
+<span class="review__date">
+    December 4,2026
+</span>
+                </div>
+              </div>  
+
+               <div class="review__single">
+                <div>
+                    <img src="images/avatar-3.jpg" class="review__img">
+                    <h4 class="review__title">Jacky chan</h4>
+                </div>
+                <div class="review__data">
+<div class="review__rating">
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+</div>
+<p class="review_description">
+Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta repudiandae consectetur quibusdam, tempore dolores totam ipsa error quod amet sequi? Modi quaerat odit quas incidunt saepe, consequatur iure sit optio.
+</p>
+<span class="review__date">
+    December 4,2026
+</span>
+                </div>
+              </div>  
+            </div>
+        <div class="review__form">
+            <h4 class="review__form-title">
+                Add a review
+            </h4>
+    <div class="rate__product">
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+    <i class="fi fi-rs-star"></i>
+</div>
+<form action="" class="form grid">
+   <textarea class="form__input textarea">Write Comment</textarea>
+    <div class="form__group grid">
+<input type="text" placeholder="name" class="form__input">
+<input type="text" placeholder="email" class="form__input">
+
+    </div>
+    <div class="form__btn">
+        <button class="btn">Submit Review</button>
+    </div>
+</form>
+        </div>
+        </div>
+
+    </div>
+</section>
       <!-- newsletter-section -->
      <section class="newsletter section home__newsletter">
 <div class="newsletter__container container grid">
@@ -189,6 +309,7 @@
      </footer> 
 <script src="details.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+ <script src="main.js"></script>
 
 </body>
 </html>
