dynamic additional section added

--- a/details.html
+++ b/details.html
@@ -101,7 +101,7 @@
     </div>
     <div class="details__tabs-content">
         <div class="details__tab-content active-tab" content id="info">
-            <table class="info__table">
+            <table id="info__table">
                 <tr>
                     <th>Fjallraven - Foldsack No. 1 Backpack:</th>
                     <td>A functional backpack with a 15-inch laptop</td>
@@ -197,7 +197,7 @@ Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consec
     <i class="fi fi-rs-star"></i>
 </div>
 <form action="" class="form grid">
-   <textarea class="form__input textarea">Write Comment</textarea>
+   <textarea class="form__input textarea" placeholder="Write a Comment..."></textarea>
     <div class="form__group grid">
 <input type="text" placeholder="name" class="form__input">
 <input type="text" placeholder="email" class="form__input">
