relateable products added in products details section

--- a/details.html
+++ b/details.html
@@ -102,18 +102,15 @@
     <div class="details__tabs-content">
         <div class="details__tab-content active-tab" content id="info">
             <table id="info__table">
-                <tr>
-                    <th>Fjallraven - Foldsack No. 1 Backpack:</th>
-                    <td>A functional backpack with a 15-inch laptop</td>
-                </tr>
-                <tr>
+                
+                <!-- <tr>
                     <th>Mens Casual Premium Slim Fit T-Shirts:</th>
                     <td>These shirts offer a modern, slim-fit silhouette</td>
                 </tr>
                 <tr>
                     <th>Mens Cotton Jacket</th>
                     <td>A rugged, mid-weight jacket featuring a stand collar</td>
-                </tr>
+                </tr> -->
                 
             </table>
         </div>
@@ -211,6 +208,16 @@ Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consec
         </div>
 
     </div>
+</section>
+
+<!-- products -->
+<section class="products section section--lg container">
+    <h3 class="section__title">
+        <Span>Related</Span>Products
+    </h3>
+<div id="product__related-section" class="grid">
+
+</div>
 </section>
       <!-- newsletter-section -->
      <section class="newsletter section home__newsletter">
