--- a/cart.html
+++ b/cart.html
@@ -62,12 +62,12 @@
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-    <span class="count">3</span>
+    <span class="count" id="counter__total-wishlist">3</span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
     <img src="images/icon-cart.svg" alt="">
-    <span class="count">3</span>
+    <span class="count" id="counter__total"></span>
 </a>
     </div>
 </nav>
@@ -270,6 +270,7 @@
      </footer> 
 <script src="cart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
- <script src="main.js"></script>
+<script src="common-wishlist.js"></script>
+ <script src="common.js"></script>
 </body>
 </html>
