--- a/details.html
+++ b/details.html
@@ -63,12 +63,12 @@
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-    <span class="count">3</span>
+   <span class="count" id="counter__total-wishlist">3</span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
     <img src="images/icon-cart.svg" alt="">
-    <span class="count">3</span>
+    <span class="count" id="counter__total"></span>
 </a>
     </div>
 </nav>
@@ -322,6 +322,7 @@ Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consec
 <script src="details.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
  <script src="main.js"></script>
-
+ <script src="common.js"></script>
+ <script src="common-wishlist.js"></script>
 </body>
 </html>
