login section added

--- a/details.html
+++ b/details.html
@@ -50,7 +50,7 @@
             <a href="compare.html" class="nav__link">Compare</a>
             </li>
             <li class="nav__item">
-            <a href="login-register html" class="nav__link">login</a>
+            <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
         <div class="header__search">
@@ -220,7 +220,7 @@ Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consec
 </div>
 </section>
       <!-- newsletter-section -->
-     <section class="newsletter section home__newsletter">
+     <section class="newsletter section">
 <div class="newsletter__container container grid">
     <h3 class="newsletter__title flex">
         <img src="images/icon-email.svg" alt="" class="newsletter__icon">
