--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
         <p class="header__alert-news">
             Super Value Deals - Save more with coupons
         </p>
-        <a href="login-register html" class="header__top-action">
+        <a href="login-register.html" class="header__top-action">
             Log In / Sign Up
         </a>
     </div>
@@ -49,7 +49,7 @@
             <a href="compare.html" class="nav__link">Compare</a>
             </li>
             <li class="nav__item">
-            <a href="login-register html" class="nav__link">login</a>
+            <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
         <div class="header__search">
@@ -174,7 +174,7 @@
 
 
       <!-- newsletter-section -->
-     <section class="newsletter section home__newsletter">
+     <section class="newsletter section">
 <div class="newsletter__container container grid">
     <h3 class="newsletter__title flex">
         <img src="images/icon-email.svg" alt="" class="newsletter__icon">
