--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="header__alert-news">
             Super Value Deals - Save more with coupons
         </p>
-        <a href="login-register html" class="header__top-action">
+        <a href="login-register.html" class="header__top-action">
             Log In / Sign Up
         </a>
     </div>
@@ -52,7 +52,7 @@
             <a href="compare.html" class="nav__link">Compare</a>
             </li>
             <li class="nav__item">
-            <a href="login-register html" class="nav__link">login</a>
+            <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
         <div class="header__search">
@@ -65,7 +65,7 @@
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-    <span class="count" id="counter__total-wishlist">3</span>
+    <span class="count" id="counter__total-wishlist"></span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
