--- a/wishlist.html
+++ b/wishlist.html
@@ -24,7 +24,7 @@
         <p class="header__alert-news">
             Super Value Deals - Save more with coupons
         </p>
-        <a href="login-register html" class="header__top-action">
+        <a href="login-register.html" class="header__top-action">
             Log In / Sign Up
         </a>
     </div>
@@ -37,7 +37,7 @@
     <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
-            <a href="index.html" class="nav__link active-link">Home</a>
+            <a href="index.html" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
             <a href="shop.html" class="nav__link">Shop</a>
@@ -49,7 +49,7 @@
             <a href="compare.html" class="nav__link">Compare</a>
             </li>
             <li class="nav__item">
-            <a href="login-register html" class="nav__link">login</a>
+            <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
         <div class="header__search">
@@ -89,7 +89,7 @@
         <table class="table">
             <tr>
                 <th>Images</th>
-                <th>Name</th>
+                <th>Name</th> 
                 <th>Price</th>
                 <th>Stock Status</th>
                 <th>Action</th>
@@ -134,7 +134,7 @@
     </div>
       </section>
      <!-- newsletter -->
-      <section class="newsletter section home__newsletter">
+      <section class="newsletter section">
 <div class="newsletter__container container grid">
     <h3 class="newsletter__title flex">
         <img src="images/icon-email.svg" alt="" class="newsletter__icon">
