compare section addtocard added

--- a/compare.html
+++ b/compare.html
@@ -190,6 +190,11 @@
             </span>
      </div>   
      </footer> 
+     <script>
+        function getid(id){
+            localStorage.setItem('id',id)
+        }
+     </script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 
   <script src="common.js"></script>
