quick view section dynamic added

--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <nav class="nav container">
-    <a href="#" class="nav__logo">
+    <a href="index.html" class="nav__logo">
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
@@ -101,11 +101,11 @@
         </table>
     </div>
     <div class="cart__actions">
-        <a href="#" class="btn flex btn--md">
+        <a href="compare.html" class="btn flex btn--md">
             <i class="fi-rs-shuffle"></i>Update Cart
         </a>
 
-        <a href="#" class="btn flex btn--md">
+        <a href="shop.html" class="btn flex btn--md">
             <i class="fi-rs-shopping-bag"></i>Continue Shopping
         </a>
     </div>
