--- a/details.html
+++ b/details.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 <nav class="nav container">
-    <a href="#" class="nav__logo">
+    <a href="index.html" class="nav__logo">
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
