--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon">
     <title>Ecommerce website</title>
     <!-- swiper-links -->
+     <!-- font-awesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <!-- flaticon -->
       <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
      <link
@@ -183,6 +185,9 @@
     <div class="rounder"></div>
     <div class="rounder"></div>
 </div>
+ </div>
+ <div class="preview-container">
+    
  </div>
  <!-- deals-section -->
   <section class="deals section">
