--- a/result.html
+++ b/result.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <nav class="nav container">
-    <a href="#" class="nav__logo">
+    <a href="index.html" class="nav__logo">
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
@@ -52,12 +52,7 @@
             <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
-        <div class="header__search">
-            <input type="text" placeholder="Search for items..." class="form__input">
-            <button class="search__btn">
-                <img src="images/search.png" alt="">
-            </button>
-        </div>
+        
     </div>
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
@@ -187,12 +182,12 @@ const resultTitle=document.getElementsByClassName('result-title')
 const resultProducts=document.querySelector('.result-products')
 const query=localStorage.getItem('searchQuary')
 if(query){
-    resultTitle.innerHTML = `Searching Results for: "<span>${query}</span>"`;
+    resultTitle.innerHTML = `<p>Searching Results for: "<span>${query.title}</span</p>"`;
 }
 fetch('https://fakestoreapi.com/products')
 .then(res=>res.json())
 .then(data=>{
-    const filtered=data.filter(p=>p.title.toLowerCase().includes(query.toLocaleLowerCase()))
+    const filtered=data.filter(p=>p.title.toLowerCase().includes(query.toLowerCase()))
     if(filtered.length===0){
         resultProducts.innerHTML=`<h2>No Matching search Product Found!</h2>`  
     }
