--- a/shop.html
+++ b/shop.html
@@ -29,17 +29,17 @@
     </div>
 </div>
 <nav class="nav container">
-    <a href="#" class="nav__logo">
+    <a href="index.html" class="nav__logo">
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
-            <a href="index.html" class="nav__link active-link">Home</a>
+            <a href="index.html" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-            <a href="shop.html" class="nav__link">Shop</a>
+            <a href="shop.html" class="nav__link active-link">Shop</a>
             </li>
             <li class="nav__item">
             <a href="accounts.html" class="nav__link">My Account</a>
