full website resposive style added

--- a/details.html
+++ b/details.html
@@ -6,6 +6,8 @@
     <!-- flaticon -->
      <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
      <!-- swiper-css -->
+      <!-- font-awesome -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
        <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
@@ -220,6 +222,9 @@ Thanks you very fast shipping from bd shopping Lorem ipsum dolor sit amet consec
 <div id="product__related-section" class="grid">
 
 </div>
+ <div class="preview-container">
+    
+ </div>
 </section>
       <!-- newsletter-section -->
      <section class="newsletter section">
