--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
     </a>
 
     <div class="nav__menu" id="nav-menu">
+        <div class="nav__menu-top">
+            <a href="index.html" class="nav__menu-logo">
+                <img src="images/logo.svg" alt="">
+            </a>
+
+        <div class="nav__close" id="nav-close">
+            <i class="fi fi-rs-cross-small"></i>
+        </div>
+        </div>
         <ul class="nav__list">
             <li class="nav__item">
             <a href="index.html" class="nav__link active-link">Home</a>
@@ -60,7 +69,7 @@
         <div class="header__search" id="input-group">
             <input type="text" placeholder="Search for items..." class="form__input" data-search>
             <button class="search__btn">
-                <img src="images/search.png" alt="">
+                <img src="images/search.png" alt="search__btn-img">
             </button>
             <div class="suggestion__box hide" data-suggestion-box id="data-suggestion"></div>
         </div>
@@ -76,6 +85,9 @@
     <img src="images/icon-cart.svg" alt="">
     <span class="count" id="counter__total"></span>
 </a>
+<div class="header__action-btn nav__toggle" id="nav-toggle">
+<img src="images/menu-burger.svg" alt="">
+</div>
     </div>
 </nav>
 
@@ -594,7 +606,7 @@ Multi-color Stripe Circle
                      <li><a href="#" class="footer__link">Order</a></li>
             </ul>
         </div>
-        <div class="footer__container">
+        <div id="footer__container">
             <h3 class="footer__title">
                 Secured Payment Gateways
             </h3>
