bug fixed in code added fresh code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 <nav class="nav container">
-    <a href="#" class="nav__logo">
+    <a href="index.html" class="nav__logo">
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
@@ -78,7 +78,7 @@
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-    <span class="count" id="counter__total-wishlist">3</span>
+    <span class="count" id="counter__total-wishlist"></span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
