--- a/details.html
+++ b/details.html
@@ -37,10 +37,19 @@
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
-   <div class="nav__menu" id="nav-menu">
+    <div class="nav__menu" id="nav-menu">
+        <div class="nav__menu-top">
+            <a href="index.html" class="nav__menu-logo">
+                <img src="images/logo.svg" alt="">
+            </a>
+
+        <div class="nav__close" id="nav-close">
+            <i class="fi fi-rs-cross-small"></i>
+        </div>
+        </div>
         <ul class="nav__list">
             <li class="nav__item">
-            <a href="index.html" class="nav__link active-link">Home</a>
+            <a href="index.html" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
             <a href="shop.html" class="nav__link">Shop</a>
@@ -55,28 +64,24 @@
             <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
-        <div class="header__search" id="input-group">
-            <input type="text" placeholder="Search for items..." class="form__input" data-search>
-            <button class="search__btn">
-                <img src="images/search.png" alt="">
-            </button>
-            <div class="suggestion__box hide" data-suggestion-box id="data-suggestion"></div>
-        </div>
+       
         <div class="cart__container" data-container></div>
     </div>
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-   <span class="count" id="counter__total-wishlist">3</span>
+    <span class="count" id="counter__total-wishlist">3</span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
     <img src="images/icon-cart.svg" alt="">
     <span class="count" id="counter__total"></span>
 </a>
+<div class="header__action-btn nav__toggle" id="nav-toggle">
+<img src="images/menu-burger.svg" alt="">
+</div>
     </div>
 </nav>
-
 </header>
 <!-- main-section -->
   <main class="main">
