--- a/login-register.html
+++ b/login-register.html
@@ -35,6 +35,15 @@
     </a>
 
     <div class="nav__menu" id="nav-menu">
+        <div class="nav__menu-top">
+            <a href="index.html" class="nav__menu-logo">
+                <img src="images/logo.svg" alt="">
+            </a>
+
+        <div class="nav__close" id="nav-close">
+            <i class="fi fi-rs-cross-small"></i>
+        </div>
+        </div>
         <ul class="nav__list">
             <li class="nav__item">
             <a href="index.html" class="nav__link">Home</a>
@@ -49,21 +58,25 @@
             <a href="compare.html" class="nav__link">Compare</a>
             </li>
             <li class="nav__item">
-            <a href="login-register.html" class="nav__link  active-link">login</a>
+            <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
-        
+       
+        <div class="cart__container" data-container></div>
     </div>
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
     <img src="images/icon-heart.svg" alt="">
-    <span class="count" id="counter__total-wishlist"></span>
+    <span class="count" id="counter__total-wishlist">3</span>
 </a>
 
 <a href="cart.html" class="header__action-btn">
     <img src="images/icon-cart.svg" alt="">
     <span class="count" id="counter__total"></span>
 </a>
+<div class="header__action-btn nav__toggle" id="nav-toggle">
+<img src="images/menu-burger.svg" alt="">
+</div>
     </div>
 </nav>
 
