--- a/shop.html
+++ b/shop.html
@@ -35,13 +35,22 @@
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
-     <div class="nav__menu" id="nav-menu">
+    <div class="nav__menu" id="nav-menu">
+        <div class="nav__menu-top">
+            <a href="index.html" class="nav__menu-logo">
+                <img src="images/logo.svg" alt="">
+            </a>
+
+        <div class="nav__close" id="nav-close">
+            <i class="fi fi-rs-cross-small"></i>
+        </div>
+        </div>
         <ul class="nav__list">
             <li class="nav__item">
             <a href="index.html" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-            <a href="shop.html" class="nav__link active-link">Shop</a>
+            <a href="shop.html" class="nav__link  active-link">Shop</a>
             </li>
             <li class="nav__item">
             <a href="accounts.html" class="nav__link">My Account</a>
@@ -56,7 +65,7 @@
         <div class="header__search" id="input-group">
             <input type="text" placeholder="Search for items..." class="form__input" data-search>
             <button class="search__btn">
-                <img src="images/search.png" alt="">
+                <img src="images/search.png" alt="search__btn-img">
             </button>
             <div class="suggestion__box hide" data-suggestion-box id="data-suggestion"></div>
         </div>
@@ -72,6 +81,9 @@
     <img src="images/icon-cart.svg" alt="">
     <span class="count" id="counter__total"></span>
 </a>
+<div class="header__action-btn nav__toggle" id="nav-toggle">
+<img src="images/menu-burger.svg" alt="">
+</div>
     </div>
 </nav>
 
